--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "mongoose": "^8.3.4",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zo": "^0.0.2",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@types/node": "^20",
