added resend and react-email sign-up logic

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI=""
+MONGO_URI="mongodb+srv://admin:admin@cluster0.t7xvbwf.mongodb.net/lms"
+RESEND_API_KEY="re_FVC1yL7f_CZkg3cawq5DQikExkYWQinTj"
