my first commit of june start next-auth

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI="mongodb+srv://admin:admin@cluster0.t7xvbwf.mongodb.net/lms"
 RESEND_API_KEY="re_FVC1yL7f_CZkg3cawq5DQikExkYWQinTj"
+NEXTAUTH_SECRET="Sddfffyudrs@rsgc"
