--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ai": "^3.1.30",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.3.4",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "openai": "^4.49.1",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.2",
     "resend": "^3.2.0",
     "zo": "^0.0.2",
-    "zod": "^3.23.6"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
