--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .pnp.js
 /.env
 .env
+/env
 .yarn/install-state.gz
 
 # testing
@@ -29,6 +30,9 @@ yarn-error.log*
 
 # local env files
 .env*.local
+/env
+.env
+/.env
 
 # vercel
 .vercel
