--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "ai": "^3.1.30",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.390.0",
     "mongoose": "^8.3.4",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
@@ -18,7 +26,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.2",
+    "react-hook-form": "^7.51.5",
     "resend": "^3.2.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "zo": "^0.0.2",
     "zod": "^3.23.8"
   },
